[package]
name = "get621"
version = "1.2.2"
authors = ["nasso <nassomails ~ at ~ gmail {dot} com>"]
edition = "2018"
description = "E621 CLI"
repository = "https://github.com/nasso/get621"
readme = "README.md"
keywords = ["e621", "e926", "furry", "cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
tempfile = "3.1.0"
lazy_static = "1.4.0"
regex = "1"
scraper = "0.10.1"
glob = "0.3.0"
clap = "2.33.0"
chrono = "0.4.8"
reqwest = "0.9.20"
urlencoding = "1.0.0"
serde_json = "1.0.40"
