[package]
name = "get621"
version = "1.3.0-alpha1"
authors = ["nasso <nassomails ~ at ~ gmail {dot} com>"]
edition = "2018"
description = "E621 CLI"
repository = "https://github.com/nasso/get621"
readme = "README.md"
keywords = ["e621", "e926", "furry", "cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
rs621 = "0.6"
thiserror = "1"
lazy_static = "1.4"
regex = "1"
glob = "0.3"
clap = "2.33"
chrono = "0.4"
futures = "0.3"
mime_guess = "2"
scraper = "0.12"
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["multipart", "stream", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
